# vs-benchmark

./: README.md  example.py  pyproject.toml
vsbenchmark/: __init__.py  core.py  utils.py
