[tool.poetry]
name = "vsbenchmark"
version = "0.1.0"
description = ""
authors = ["OpusGang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
vapoursynth = "^69"
vstools = "^3.2.0"
numpy = "^1.26.4"
tabulate = "^0.9.0"
tqdm = "^4.66.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
